ajout musique d'action

--- a/Sources/Assembly-CSharp-vs.csproj
+++ b/Sources/Assembly-CSharp-vs.csproj
@@ -68,6 +68,7 @@
      <Compile Include="Assets\OpenRelativity\shaders\ColorCorrectionEffect.cs" />
      <Compile Include="Assets\OpenRelativity\shaders\ImageEffectBase.cs" />
      <Compile Include="Assets\Scripts\AttraperCSharp.cs" />
+     <Compile Include="Assets\Scripts\Footsteps.cs" />
      <Compile Include="Assets\Scripts\HealthBar.cs" />
      <Compile Include="Assets\Scripts\PorteCSharp.cs" />
      <Compile Include="Assets\Scripts\SynchroTirCSharp.cs" />
