--- a/Sources/Assembly-CSharp-firstpass-vs.csproj
+++ b/Sources/Assembly-CSharp-firstpass-vs.csproj
@@ -54,12 +54,16 @@
      <None Include="Assets\Departement\Textures\cielenfond.txt" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\OpenRelativity\shaders\relativity.shader" />
+     <None Include="Assets\Little War Machines\readme.txt" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
      <None Include="Assets\OpenRelativity\shaders\desaturateShader.shader" />
      <None Include="Assets\OpenRelativity\shaders\skybox.shader" />
+     <None Include="Assets\fightBOT (free)\model\Materials\roboShader.shader" />
      <None Include="Assets\Departement\Textures\departinfo.txt" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Sources\Shaders\Projector Light.shader" />
+     <None Include="Assets\Nobiax Free Gaz Tank\Nobiax Free Gaz Tank.txt" />
      <None Include="Assets\Monster2pack\Shaders\OlesWaterSurfaceShader.shader" />
+     <None Include="Assets\Ben3d Crate\Read me.txt" />
      <None Include="Assets\KBH_character\Readme.txt" />
  <Reference Include="MiddleVR_dotNet">
  <HintPath>Assets\ZombieCharacterPack\MiddleVR\MiddleVR_dotNet.dll</HintPath>
