debut health bar + explosion kill ennemi

--- a/Sources/Assembly-CSharp-vs.csproj
+++ b/Sources/Assembly-CSharp-vs.csproj
@@ -56,6 +56,18 @@
      <Compile Include="Assets\Effect Textures\Scripts\Rotation.cs" />
      <Compile Include="Assets\Effect Textures\Scripts\Scales.cs" />
      <Compile Include="Assets\Effect Textures\Scripts\ScrollUV.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Assist Examples\ConnectWithKillDisplay.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Assist Examples\DisplayKills.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Health\DestroyOnDeath.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Health\Health.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Health\HealthAssist.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Health\HealthEventIndicator.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Health\SpawnOnHealthEvent.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Health\TemporaryHealthBuff.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Other Examples\HealthText.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Other Examples\RestartScene.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Other Examples\Shoot.cs" />
+     <Compile Include="Assets\Health Script\Scripts\Ownership\Owner.cs" />
      <Compile Include="Assets\MiddleVR_FirstPersonController\VRFPSInputController.cs" />
      <Compile Include="Assets\Monster2pack\Scripts\Ventilation.cs" />
      <Compile Include="Assets\OpenRelativity\GameState.cs" />
