--- a/Sources/Assembly-CSharp.csproj
+++ b/Sources/Assembly-CSharp.csproj
@@ -85,6 +85,8 @@
      <Compile Include="Assets\Scripts\AttraperCSharp.cs" />
      <Compile Include="Assets\Scripts\FirstEvent.cs" />
      <Compile Include="Assets\Scripts\HealthBar.cs" />
+     <Compile Include="Assets\Scripts\HealthPlayerCSharp.cs" />
+     <Compile Include="Assets\Scripts\LanceurBalleCannon.cs" />
      <Compile Include="Assets\Scripts\MunitionControl.cs" />
      <Compile Include="Assets\Scripts\PorteCSharp.cs" />
      <Compile Include="Assets\Scripts\Rotator.cs" />
@@ -125,6 +127,7 @@
      <None Include="Assets\Machine Shop Equipment\Readme.txt" />
      <None Include="Assets\OpenRelativity\shaders\skybox.shader" />
      <None Include="Assets\fightBOT (free)\model\Materials\roboShader.shader" />
+     <None Include="Assets\Turret\Shaders\AlphaTest_Complete.shader" />
      <None Include="Assets\Departement\Textures\departinfo.txt" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Sources\Shaders\Projector Light.shader" />
      <None Include="Assets\Nobiax Free Gaz Tank\Nobiax Free Gaz Tank.txt" />
