--- a/Sources/Assembly-CSharp-vs.csproj
+++ b/Sources/Assembly-CSharp-vs.csproj
@@ -115,6 +115,7 @@
      <Compile Include="Assets\deplacement\WiiMote.cs" />
      <Compile Include="Assets\openTheDoor.cs" />
      <Compile Include="Assets\sandClockScript.cs" />
+     <Compile Include="Assets\teleportation.cs" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Guidelines.txt" />
      <None Include="Assets\KBH_character\Materials\HiPoly\NewShader.shader" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Sources\Shaders\Projector Multiply.shader" />
