--- a/Sources/Assembly-CSharp-vs.csproj
+++ b/Sources/Assembly-CSharp-vs.csproj
@@ -46,15 +46,6 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Armes\Scripts\BatteCSharp.cs" />
-     <Compile Include="Assets\Armes\Scripts\CompteurDeKills.cs" />
-     <Compile Include="Assets\Armes\Scripts\EnemyHealth.cs" />
-     <Compile Include="Assets\Armes\Scripts\GestionArmesCSharp.cs" />
-     <Compile Include="Assets\Armes\Scripts\GestionVLum.cs" />
-     <Compile Include="Assets\Armes\Scripts\LanceurBatteReondissanteCSharp.cs" />
-     <Compile Include="Assets\Armes\Scripts\TestHealthBar.cs" />
-     <Compile Include="Assets\AudioManager.cs" />
-     <Compile Include="Assets\ClosedDoor.cs" />
      <Compile Include="Assets\Effect Textures\Scripts\Rotation.cs" />
      <Compile Include="Assets\Effect Textures\Scripts\Scales.cs" />
      <Compile Include="Assets\Effect Textures\Scripts\ScrollUV.cs" />
@@ -85,15 +76,32 @@
      <Compile Include="Assets\OpenRelativity\shaders\ColorCorrectionEffect.cs" />
      <Compile Include="Assets\OpenRelativity\shaders\ImageEffectBase.cs" />
      <Compile Include="Assets\Scripts\AttraperCSharp.cs" />
+     <Compile Include="Assets\Scripts\AudioManager.cs" />
+     <Compile Include="Assets\Scripts\BatteCSharp.cs" />
+     <Compile Include="Assets\Scripts\ClosedDoor.cs" />
+     <Compile Include="Assets\Scripts\CompteurDeKills.cs" />
+     <Compile Include="Assets\Scripts\EnemyHealth.cs" />
+     <Compile Include="Assets\Scripts\GestionArmesCSharp.cs" />
+     <Compile Include="Assets\Scripts\GestionVLum.cs" />
      <Compile Include="Assets\Scripts\HealthBar.cs" />
+     <Compile Include="Assets\Scripts\LanceurBatteReondissanteCSharp.cs" />
      <Compile Include="Assets\Scripts\MunitionControl.cs" />
      <Compile Include="Assets\Scripts\PorteCSharp.cs" />
      <Compile Include="Assets\Scripts\Rotator.cs" />
      <Compile Include="Assets\Scripts\StartGenerator.cs" />
      <Compile Include="Assets\Scripts\SynchroTirCSharp.cs" />
+     <Compile Include="Assets\Scripts\TRR.cs" />
+     <Compile Include="Assets\Scripts\TestHealthBar.cs" />
      <Compile Include="Assets\Scripts\TextControl.cs" />
+     <Compile Include="Assets\Scripts\changeMusic.cs" />
+     <Compile Include="Assets\Scripts\copterExplosion.cs" />
+     <Compile Include="Assets\Scripts\crashingCopter.cs" />
+     <Compile Include="Assets\Scripts\erraticTeleportation.cs" />
+     <Compile Include="Assets\Scripts\getCanon.cs" />
+     <Compile Include="Assets\Scripts\openTheDoor.cs" />
+     <Compile Include="Assets\Scripts\sandClockScript.cs" />
+     <Compile Include="Assets\Scripts\teleportation.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
-     <Compile Include="Assets\TRR.cs" />
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Cluster\VRApplySharedTransform.cs" />
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Cluster\VRClusterObject.cs" />
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Cluster\VRShareTransform.cs" />
@@ -110,15 +118,8 @@
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Samples\VRCalibrateTrackerYaw.cs" />
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Samples\VRInteractionTest.cs" />
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Samples\VRVirtualTrackerMapping.cs" />
-     <Compile Include="Assets\changeMusic.cs" />
-     <Compile Include="Assets\copterExplosion.cs" />
-     <Compile Include="Assets\crashingCopter.cs" />
      <Compile Include="Assets\deplacement\Interaction.cs" />
      <Compile Include="Assets\deplacement\WiiMote.cs" />
-     <Compile Include="Assets\erraticTeleportation.cs" />
-     <Compile Include="Assets\openTheDoor.cs" />
-     <Compile Include="Assets\sandClockScript.cs" />
-     <Compile Include="Assets\teleportation.cs" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Guidelines.txt" />
      <None Include="Assets\KBH_character\Materials\HiPoly\NewShader.shader" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Sources\Shaders\Projector Multiply.shader" />
