--- a/Sources/Assembly-CSharp.csproj
+++ b/Sources/Assembly-CSharp.csproj
@@ -19,7 +19,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_2;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_4;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -78,6 +78,8 @@
      <Compile Include="Assets\Scripts\AttraperCSharp.cs" />
      <Compile Include="Assets\Scripts\AudioManager.cs" />
      <Compile Include="Assets\Scripts\BatteCSharp.cs" />
+     <Compile Include="Assets\Scripts\Bonus_Count.cs" />
+     <Compile Include="Assets\Scripts\Bonus_script.cs" />
      <Compile Include="Assets\Scripts\ClosedDoor.cs" />
      <Compile Include="Assets\Scripts\CompteurDeKills.cs" />
      <Compile Include="Assets\Scripts\GestionArmesCSharp.cs" />
@@ -97,6 +99,7 @@
      <Compile Include="Assets\Scripts\openTheDoor.cs" />
      <Compile Include="Assets\Scripts\sandClockScript.cs" />
      <Compile Include="Assets\Scripts\teleportation.cs" />
+     <Compile Include="Assets\Scripts\timer.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Cluster\VRApplySharedTransform.cs" />
      <Compile Include="Assets\ZombieCharacterPack\MiddleVR\Scripts\Cluster\VRClusterObject.cs" />
@@ -130,6 +133,7 @@
      <None Include="Assets\Machine Shop Equipment\Readme.txt" />
      <None Include="Assets\OpenRelativity\shaders\skybox.shader" />
      <None Include="Assets\fightBOT (free)\model\Materials\roboShader.shader" />
+     <None Include="Assets\Turret\Shaders\AlphaTest_Complete.shader" />
      <None Include="Assets\Departement\Textures\departinfo.txt" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Sources\Shaders\Projector Light.shader" />
      <None Include="Assets\Nobiax Free Gaz Tank\Nobiax Free Gaz Tank.txt" />
