--- a/Sources/Assembly-CSharp-vs.csproj
+++ b/Sources/Assembly-CSharp-vs.csproj
@@ -98,6 +98,8 @@
      <Compile Include="Assets\Scripts\getCanon.cs" />
      <Compile Include="Assets\Scripts\openTheDoor.cs" />
      <Compile Include="Assets\Scripts\sandClockScript.cs" />
+     <Compile Include="Assets\Scripts\speedOfLightSetter.cs" />
+     <Compile Include="Assets\Scripts\startTimer.cs" />
      <Compile Include="Assets\Scripts\teleportation.cs" />
      <Compile Include="Assets\Scripts\timer.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
@@ -121,9 +123,11 @@
      <Compile Include="Assets\deplacement\WiiMote.cs" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Guidelines.txt" />
      <None Include="Assets\KBH_character\Materials\HiPoly\NewShader.shader" />
+     <None Include="Assets\Panzer_II_Ausf_F\Shaders\Panzer Tracks.shader" />
      <None Include="Assets\KBH_character\Standard Assets\Projectors\Sources\Shaders\Projector Multiply.shader" />
      <None Include="Assets\Help.txt" />
      <None Include="Assets\plants\dd\AlphaTest-Bumped.shader" />
+     <None Include="Assets\Panzer_II_Ausf_F\readme.txt" />
      <None Include="Assets\Departement\Textures\cielenfond.txt" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\OpenRelativity\shaders\relativity.shader" />
