--- a/Sources/Assembly-CSharp-Editor-vs.csproj
+++ b/Sources/Assembly-CSharp-Editor-vs.csproj
@@ -76,6 +76,9 @@
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>Library\ScriptAssemblies\Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
+ <Reference Include="Assembly-UnityScript">
+ <HintPath>Library\ScriptAssemblies\Assembly-UnityScript.dll</HintPath>
+ </Reference>
  <Reference Include="MiddleVR_dotNet">
  <HintPath>Assets\ZombieCharacterPack\MiddleVR\MiddleVR_dotNet.dll</HintPath>
  </Reference>
