--- a/Sources/Assembly-CSharp-Editor.csproj
+++ b/Sources/Assembly-CSharp-Editor.csproj
@@ -105,6 +105,8 @@
       <Project>{5A5013DB-CC3E-61E4-E23A-EBA02AEB9032}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{FA30A161-B2E9-DE84-0D54-31C4148E2879}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-UnityScript.unityproj">
+      <Project>{229DDEB6-C696-B5AB-F425-2863716B8D85}</Project>      <Name>Assembly-UnityScript</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
